<!--  Textos de la app en Español (predeterminado)  -->
<resources>
    <string name="app_name">FanNetixShop</string>

    <!--  Textos usados en la actividad de inicio de sesión  -->
    <string name="text_subTitulo">Inicie sesión para continuar</string>
    <string name="text_email">EMAIL</string>
    <string name="text_passwd">CONTRASEÑA</string>

    <!--  Textos usados en la actividad subir producto  -->
    <string name="tvTitulo">Subir Producto</string>
    <string name="infoTextUpdateResources">Subir fotos</string>
    <string name="infoTextName">Nombre del Producto</string>
    <string name="infoTextDescription">Descripción</string>
    <string name="infoTextType">Tipo</string>
    <string name="rbFanmade">FANMADE</string>
    <string name="rbOriginal">ORIGINAL</string>
    <string name="infoTextArtist">Artista</string>
    <string name="infoTextPrice">Precio</string>
    <string name="btnVolver">Volver</string>
    <string name="btnUploadProduct">Subir</string>

    <!--  Opciones del spinner (artistas)  -->
    <string name="spOpt1">Bruno Mars</string>
    <string name="spOpt2">BlackPink</string>
    <string name="spOpt3">Eminem</string>
    <string name="spOpt4">Stray Kids</string>
    <string name="spOpt5">Harry Styles</string>
    <string name="spOpt6">IZ*ONE</string>
    <string name="spOpt7">Adele</string>
    <string name="spOpt8">Fito</string>

    <!--  Textos usados en los xml de la tienda -->
    <string name="btnBuy">Comprar</string>
    <string name="btnUpload">Subir Producto</string>
    <string name="textIG">Echa un vistazo a su instagram</string>
    <string name="textWIKI">Echa un vistazo a su Wiki</string>
    <string name="textYT">Echa un vistazo a su Youtube</string>

    <!--  Textos usados en el carrito de la compra  -->
    <string name="btnPay">Pagar</string>
    <string name="text_precio_total">Total:</string>

    <!--  Textos usados en los toasts  -->
    <string name="toastEmpty1">"Introduce un nombre para el producto"</string>
    <string name="toastEmpty2">"Introduce una descripción para el producto"</string>
    <string name="toastEmpty3">"Introduce un precio para el producto"</string>
    <string name="toastPriceFormat">"Introduce un precio válido"</string>
    <string name="toastPhoto">"Por favor, captura una foto del producto"</string>
    <string name="toastType">"Selecciona un tipo de producto"</string>
    <string name="toastCreated">"Artículo creado: "</string>
    <string name="toastNotCreated">"No se ha podido crear el articulo "</string>
    <string name="toastEmptyCart">"El carrito está vacío"</string>
    <string name="toastProductNotSelected">"No hay artículos seleccionados para comprar"</string>
    <string name="toastPayment">"Pago procesado"</string>
    <string name="toastItemNotSelectedPay">"No hay artículos seleccionados para eliminar"</string>
    <string name="toastDeletedItems">"Artículos eliminados correctamente"</string>
    <string name="toastUserNotFound">"Error, usuario no encontrado"</string>
    <string name="toastItemAddedCart">"Artículo añadido al carrito"</string>
    <string name="toastItemNotAddedCart">"Ya tienes ese articulo en el carrito"</string>
    <string name="toastImageSaved">"Imagen guardada"</string>
    <string name="toastImageError">"Error al guardar imagen"</string>
    <string name="toastCameraPermission">"Los permisos de camara son necesarios"</string>
</resources>