<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_upload_product"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_general"
    tools:context=".UploadProductActivity">

    <!-- Botón Volver -->
    <ImageButton
        android:id="@+id/imgbtn_volver"
        android:layout_width="82dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/cardview_shadow_end_color"
        android:contentDescription="@string/btnVolver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/flecha_volver64" />

    <!-- Título principal con sombra -->

    <!-- Título principal -->

    <!-- LinearLayout Subir Contenido -->
    <TextView
        android:id="@+id/tv_titulo_glow"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:fontFamily="@font/tan_nimbus"
        android:shadowColor="#f96053"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="30"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_centerInParent="true"
        android:fontFamily="@font/tan_nimbus"
        android:shadowColor="#FFFFFF"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="10"
        android:text="@string/tvTitulo"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.097" />

    <LinearLayout
        android:id="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="15dp"
        >

        <LinearLayout
            android:id="@+id/subirContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#66F96053"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/imgbtn_SubirProducto"
                android:layout_width="137dp"
                android:layout_height="123dp"
                android:backgroundTint="@color/cardview_shadow_end_color"
                android:contentDescription="@string/btnUpload"
                android:src="@drawable/upload148" />

            <TextView
                android:id="@+id/textinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTextUpdateResources"
                android:textAlignment="center"
                android:textColor="#99FFFFFF "
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- LinearLayout Info Producto -->
        <LinearLayout
            android:id="@+id/infoProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#66F96053"
            android:gravity="top"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTextName"
                android:textColor="#FFFFFF "
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreProducto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/infoTextName"
                android:inputType="text"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTextDescription"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF "
                android:textSize="17sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/infoTextDescription"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infoTextType"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF "
                android:textSize="17sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroupTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonOriginal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/rbOriginal"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

                <RadioButton
                    android:id="@+id/radioButtonFanmade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbFanmade"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </RadioGroup>

            <!-- Spinner y precio -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvArtista"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/infoTextArtist"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerArtistas"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:textColor="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/CustomSpinner"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="63dp"
                    android:layout_height="wrap_content"
                    android:text="@string/infoTextPrice"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF "
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPrecio"
                    android:layout_width="290dp"
                    android:layout_height="60dp"
                    android:hint="@string/infoTextPrice"
                    android:inputType="numberDecimal"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- Botón Subir Producto -->
    <Button
        android:id="@+id/btnSubir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#61f96053"
        android:fontFamily="@font/tan_nimbus"
        android:text="@string/btnUploadProduct"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout" />


</androidx.constraintlayout.widget.ConstraintLayout>