<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgFondo"
            android:layout_width="match_parent"
            android:layout_height="993dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="-284dp"
            android:layout_marginBottom="-162dp"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo" />

        <TextView
            android:id="@+id/textSubTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="542dp"
            android:text="@string/text_subTitulo"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="290dp"
            android:layout_marginBottom="316dp"
            android:text="@string/text_passwd"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="334dp"
            android:layout_marginBottom="465dp"
            android:text="@string/text_email"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/imageBtnSignIn"
            android:layout_width="162dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="123dp"
            android:layout_marginBottom="121dp"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:contentDescription="Enviar mensaje"
            app:layout_constraintHorizontal_bias="0.222"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.478"
            app:srcCompat="@drawable/btn_signin" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="69dp"
            android:layout_marginBottom="382dp"
            android:ems="10"
            android:hint="Correo electrónico"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextEmail2"
            android:layout_width="272dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="67dp"
            android:layout_marginBottom="238dp"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/black" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
